--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "whatsapp-webhook-server",
   "version": "1.0.0",
-  "main": "webhook-server.js",
+  "main": "webhook.js",
   "scripts": {
-    "start": "node webhook-server.js"
+    "start": "node webhook.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
-    "axios": "^1.6.8"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2"
   }
 }
